--- a/java/多线程相关记录.md
+++ b/java/多线程相关记录.md
@@ -113,3 +113,10 @@ corePoolSize为0；maximumPoolSize为Integer.MAX_VALUE；keepAliveTime为60L；u
 * 进程可以拓展到多机，进程最多适合多核（不同火车可以开在多个轨道上，同一火车的车厢不能在行进的不同的轨道上）
 * 进程使用的内存地址可以上锁，即一个线程使用某些共享内存时，其他线程必须等它结束，才能使用这一块内存。（比如火车上的洗手间）－"互斥锁"
 * 进程使用的内存地址可以限定使用量（比如火车上的餐厅，最多只允许多少人进入，如果满了需要在门口等，等有人出来了才能进去）－“信号量”
+
+# juc下常用的类
+
+* countdownlaunch：可以模拟实现高并发，也可以主线程等待多线程处理完任务之后继续别的业务流程
+* Semaphore：控制并发信号量的，比如线程池有100个线程，通过信号量控制可以让超过信号规定的线程阻塞等待，比如数据库连接池的控制技术
+* CyclicBarrier：让多个线程相互等待，等到了初始化设置的数量后，开始执行。
+* automic*：实现多线程下的基本数据类型操作，保持安全性。
