--- a/分布式/聊聊分布式事务.md
+++ b/分布式/聊聊分布式事务.md
@@ -1,6 +1,7 @@
 # 从数据库事务说起
 
 事务有四大特性，分别是原子性、一致性、隔离性、持久性。简称ACID；
+
 * 原子性（Atomicity），可以理解为一个事务内的所有操作要么都执行，要么都不执行。
 * 一致性（Consistency），可以理解为数据是满足完整性约束的，也就是不会存在中间状态的数据，比如你账上有400，我账上有100，你给我打200块，此时你账上的钱应该是200，我账上的钱应该是300，不会存在我账上钱加了，你账上钱没扣的中间状态。
 * 隔离性（Isolation），指的是多个事务并发执行的时候不会互相干扰，即一个事务内部的数据对于其他事务来说是隔离的。
@@ -26,7 +27,7 @@
 
 第一个阶段先预提交，但没有真正提交，但这时资源是锁定的，第二阶段根据第一阶段执行情况执行commit/rollback，这里提一下在真正执行时，都是通过xa命令绑定的当前事务id来进行操作的。比如命令有xa start txid，xa end txid，xa prepare txid，xa commit txid，xarollback txid。
 
-![2阶段提交正常流程](https://gitee.com/hongqigg/imgs-bed/raw/master/image/20220217142851.png)
+![2阶段提交正常流程](https://cdn.jsdelivr.net/gh/talkzhang/imgs-bed@master/image/20220217142851.png)
 
 2阶段提交实现了事务提交的强一致性，但是存在很大的缺陷：
 
@@ -46,7 +47,7 @@
 
 所以3PC会分为3个阶段，CanCommit 准备阶段、PreCommit 预提交阶段、DoCommit 提交阶段，处理流程如下：
 
-![](https://gitee.com/hongqigg/imgs-bed/raw/master/image/20220217144530.png)
+![](https://cdn.jsdelivr.net/gh/talkzhang/imgs-bed@master/image/20220217144530.png)
 
 三阶段提交会在precommit阶段记录undo和redo日志，用于解决由于网络、宕机等原因造成的数据不一致问题的恢复。
 
@@ -65,6 +66,7 @@
 tcc默认认为在confirm阶段是不会出现任何异常的，也就是说只要 Try 成功，Confirm 一定成功（TCC设计之初的定义），Confirm 与 Cancel 如果失败，由TCC框架进行重试补偿，存在极低概率在CC环节彻底失败，则需要定时任务或人工介入。
 
 tcc在使用时要注意：
+
 1. 空回滚出现的原因是 Try 超时或者丢包，导致 TCC 分布式事务二阶段的 回滚，触发 Cancel 操作，此时事务参与者未收到Try，但是却收到了Cancel 请求,也就是 Cancel 执行时如果发现没有对应的事务 xid 或主键时，需要返回回滚成功，让事务服务管理器认为已回滚。
 2. 悬挂指的是二阶段的 Cancel 比 一阶段的Try 操作先执行，出现该问题的原因是 Try 由于网络拥堵而超时，导致事务管理器生成回滚，触发 Cancel 接口，但之后拥堵在网络的 Try 操作又被资源管理器收到了，但是 Cancel 比 Try 先到。但按照前面允许空回滚的逻辑，回滚会返回成功，事务管理器认为事务已回滚成功，所以此时应该拒绝执行空回滚之后到来的 Try 操作，否则会产生数据不一致。
 3. 幂等控制：由于网络原因或者重试操作都有可能导致 Try - Confirm - Cancel 3个操作的重复执行，所以使用 TCC 时需要注意这三个操作的幂等控制，通常我们可以使用事务 xid 或业务主键判重来控制。
@@ -99,7 +101,7 @@ saga的恢复策略有两种：
 
 那就说手为什么要使用事务消息，首先举例，当用户支付成功，将会更新支付订单，然后发送 MQ 消息。手续费系统将会通过拉取消息，计算手续费然后保存到另外一个手续费数据库中。如下图：
 
-![业务场景举例](https://gitee.com/hongqigg/imgs-bed/raw/master/image/20220217182620.png)
+![业务场景举例](https://cdn.jsdelivr.net/gh/talkzhang/imgs-bed@master/image/20220217182620.png)
 
 流程主要涉及三个步骤：
 
@@ -107,6 +109,7 @@ saga的恢复策略有两种：
 * 发送消息给 MQ
 * 手续费系统拉取消息
 * 
+
 上面提到的步骤，任何一个都会失败，如果我们没有处理，就会使两边数据不一致，将会造成下面两种情况：
 
 * 订单数据更新了，手续费数据没有生成
@@ -124,14 +127,13 @@ saga的恢复策略有两种：
 
 以 RocketMQ 为例，它提供了事务功能，可以实现分布式事务，从而保证上面事务操作与消息发送要么都成功，要么都失败。
 
-![事务消息执行流程(https://gitee.com/hongqigg/imgs-bed/raw/master/image/20220217184223.png)
+![事务消息执行流程](https://cdn.jsdelivr.net/gh/talkzhang/imgs-bed@master/image/20220217184223.png)
 
-这个`半消息`与普通的消息唯一的区别在于，在事物提交之前，这个消息对消费者来说是`不可见`的，消费者不会消费这个消息。
+这个 `半消息`与普通的消息唯一的区别在于，在事物提交之前，这个消息对消费者来说是 `不可见`的，消费者不会消费这个消息。
 
 那么流程就是发送半消息->执行本地业务流程提交/回滚->提交成功则发送成功消息到mq，手续费会正常消费，失败则发送回滚通知到mq，mq会删掉这条半消息。
 
 那么如果我们提交/回滚事务消息失败怎么办？对于这个问题，RocketMQ 给出一种事务反查的机制。我们需要需要注册一个回调接口，用于反查本地事务状态。RocketMQ 若未收到提交或回滚的请求，将会定期去反查回调接口，然后可以根据反查结果决定回滚还是提交事务，当然这里反查机制内可以设置每隔多久、以及最大查询次数都可以动态配置。
-
 
 ## 本地消息表
 
@@ -139,7 +141,7 @@ saga的恢复策略有两种：
 
 和消息事务思想差不多，消息事务是保证将本地事务和放入消息的动作的原子性，而本地消息表则是在本地事务执行时插入本地消息表，这张表插入之后在发送消息队列异步通知下一个需要处理的事务，在这中间如果发生消息发送不成功，或者消费服务没有消费怎么办？这时可以创建一个定时任务定期扫描消息表，将消息表内状态没发送的重新发送供消费者消费即可，这里有可能发生消费者多次消费同一个事务的问题，所以消费者端在开发时要保持业务执行的幂等性。
 
-![本地消息表解决场景示例图](https://gitee.com/hongqigg/imgs-bed/raw/master/image/20220218184853.png)
+![本地消息表解决场景示例图](https://cdn.jsdelivr.net/gh/talkzhang/imgs-bed@master/image/20220218184853.png)
 
 ## SEATA的AT模式
 
